[gd_scene load_steps=4 format=3 uid="uid://c8h9j0k1l2m3n5"]

[ext_resource type="Script" path="res://scripts/ui/character_details_screen.gd" id="1_screen"]
[ext_resource type="Theme" path="res://themes/game_theme.tres" id="2_theme"]
[ext_resource type="Texture2D" uid="uid://c4d5e6f7g8h9" path="res://assets/ui/backgrounds/character_details_bg.jpg" id="3_bg"]

[node name="CharacterDetailsScreen" type="Control"]
theme = ExtResource("2_theme")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_screen")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_bg")
expand_mode = 1
stretch_mode = 6

[node name="BackgroundOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContentArea" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="HeaderBar" type="HBoxContainer" parent="MainContainer/ContentArea"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="MainContainer/ContentArea/HeaderBar"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "‚Üê Back"

[node name="TitleLabel" type="Label" parent="MainContainer/ContentArea/HeaderBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.7, 0.3, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 32
text = "Character Details"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DetailsContentContainer" type="MarginContainer" parent="MainContainer/ContentArea"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="BottomActionBar" type="HBoxContainer" parent="MainContainer/ContentArea"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="SelectButton" type="Button" parent="MainContainer/ContentArea/BottomActionBar"]
custom_minimum_size = Vector2(200, 56)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Select Survivor"

[node name="StartRunButton" type="Button" parent="MainContainer/ContentArea/BottomActionBar"]
custom_minimum_size = Vector2(140, 56)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Start Run"

[node name="DeleteButton" type="Button" parent="MainContainer/ContentArea/BottomActionBar"]
custom_minimum_size = Vector2(80, 56)
layout_mode = 2
theme_override_font_sizes/font_size = 20
icon_alignment = 1
expand_icon = true
